<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konnichiwa"
        android:id="@+id/konnichiwa" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hoge" 
        android:id="@+id/hoge"
        android:layout_below="@+id/konnichiwa" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moge"
        android:id="@+id/moge"
        android:layout_below="@+id/hoge"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hoge_strong"
        android:id="@+id/hoge_strong" 
        android:layout_below="@+id/moge" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boge" 
        android:id="@+id/boge"
        android:layout_below="@+id/hoge_strong"
         />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format1" 
        android:id="@+id/format1"
        android:layout_below="@+id/boge"
         />
    



</RelativeLayout>
